Fix HTML structure and formatting issues

--- a/index.html
+++ b/index.html
@@ -57,12 +57,11 @@
       </div>
     </section>
 
-    <!-- Секция с табами (Каталог по странам) -->
+    <!-- (Каталог по странам) -->
     <section class="tabs" id="reproduction">
       <div class="container">
-        <!-- Заголовки табов -->
         <div class="tabs__top">
-          <h2 class="tabs__top-title">Репродукции</h2> <!-- h3 заменил на h2 для правильной иерархии -->
+          <h2 class="tabs__top-title">Репродукции</h2> 
           <div class="tabs__items">
             <a class="tabs__item tabs__item--active" href="#tab-1">Франция</a>
             <a class="tabs__item" href="#tab-2">Германия</a>
@@ -206,4 +205,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
